# j5c_install_from_source_001

./: .gitignore  CMakeLists.txt  README.md  license.txt  main.cpp
docs/: README Part 1.md  README Part 2.md  README Part 3.md  README.md  Results.txt
settings/: Install_Settings.cfg  Install_Settings_Defaults.cfg  MariaDB Startup.txt
source/: const_expressions.h  constants.h  enums.h  function_declarations.h  j5c_date.cpp  j5c_date.h  j5c_date_static_values.hsv  structs.h  type_abbreviations.h
source/Apache/: apache_install.h
source/CMake/: cmake.h
source/Commands/: commands.h
source/Dependencies/: dependencies.h
source/File_Functions/: file_functions.h
source/GnuPG/: GnuPG.h  Libgpg-error.h
source/Judy/: judy.h
source/Libzip/: libzip.h
source/Logging/: logging.h
source/MariaDB/: mariadb.h
source/PHP/: php.h
source/Perl/: perl5.h  perl6.h
source/Permissions/: permissions.h
source/Poco/: poco_Install.h
source/PostFix/: postfix.h
source/Python/: python.h
source/Ruby/: ruby.h
source/String_Functions/: string_functions.h
source/TCL_TK/: tcl.h  tk.h
source/TLS_SSL/: tls_ssl.h
source/Time_Functions/: time_functions.h
source/wxWidgets/: wxwidgets.h
